--- a/resources/view/t4raya.fxml
+++ b/resources/view/t4raya.fxml
@@ -1,24 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T4raya">
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text layoutX="246.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="hola 4" />
-            <Button fx:id="bok" layoutX="125.0" layoutY="188.0" mnemonicParsing="false" onAction="#cok" text="Button" />
-         </children>
-      </AnchorPane>
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T4raya">
    <bottom>
       <AnchorPane prefHeight="49.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="bReturn" layoutX="42.0" layoutY="12.0" mnemonicParsing="false" onAction="#cReturn" text="Volver al menu" />
+            <Button fx:id="bok" layoutX="172.0" layoutY="11.0" mnemonicParsing="false" onAction="#cok" text="Button" />
+            <Text layoutX="260.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="hola 4" />
          </children>
       </AnchorPane>
    </bottom>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="98.0" layoutY="72.0" prefHeight="458.0" prefWidth="561.0" style="-fx-background-color: withe;">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="99.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="77.0" minHeight="0.0" prefHeight="41.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="b0" mnemonicParsing="false" onAction="#clickB0" prefHeight="105.0" prefWidth="62.0">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b1" mnemonicParsing="false" onAction="#clickB1" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="1">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b2" mnemonicParsing="false" onAction="#clickB2" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="2">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b3" mnemonicParsing="false" onAction="#clickB3" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="3">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b4" mnemonicParsing="false" onAction="#clickB4" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="4">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b5" mnemonicParsing="false" onAction="#clickB5" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="5">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b6" mnemonicParsing="false" onAction="#clickB6" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="6">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b7" mnemonicParsing="false" onAction="#clickB7" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="7">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b8" mnemonicParsing="false" onAction="#clickB8" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="8">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+   </center>
+   <top>
+      <MenuBar prefHeight="33.0" prefWidth="593.0" BorderPane.alignment="CENTER">
+         <menus>
+            <Menu mnemonicParsing="false" text="Modo de juego">
+               <items>
+                  <RadioMenuItem fx:id="menuBiJok" mnemonicParsing="false" onAction="#clickMenuBiJok" text="2 Jugadores">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="toggleGroup" />
+                     </toggleGroup>
+                  </RadioMenuItem>
+                  <RadioMenuItem fx:id="menuJOErraza" mnemonicParsing="false" onAction="#clickMenuJOErraza" text="IA facil" toggleGroup="$toggleGroup" />
+                  <RadioMenuItem fx:id="menuJOZaila" mnemonicParsing="false" onAction="#clickMenuJOZaila" text="IA Dificil" toggleGroup="$toggleGroup" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Reiniciar">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#clickReiniciar" text="Reiniciar" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+   </top>
 </BorderPane>
