--- a/resources/view/t4raya.fxml
+++ b/resources/view/t4raya.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T4raya">
@@ -27,7 +28,7 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="98.0" layoutY="72.0" prefHeight="458.0" prefWidth="561.0" style="-fx-background-color: withe;">
+            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="159.0" layoutY="68.0" prefHeight="458.0" prefWidth="561.0" style="-fx-background-color: withe;">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="99.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -49,51 +50,105 @@
                   <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
+                  <Button fx:id="b8" mnemonicParsing="false" onAction="#clickB8" prefHeight="40.0" prefWidth="63.0" GridPane.columnIndex="8">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b7" mnemonicParsing="false" onAction="#clickB7" prefHeight="44.0" prefWidth="63.0" GridPane.columnIndex="7">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b6" mnemonicParsing="false" onAction="#clickB6" prefHeight="44.0" prefWidth="63.0" GridPane.columnIndex="6">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b5" mnemonicParsing="false" onAction="#clickB5" prefHeight="44.0" prefWidth="63.0" GridPane.columnIndex="5">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b4" mnemonicParsing="false" onAction="#clickB4" prefHeight="42.0" prefWidth="62.0" GridPane.columnIndex="4">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b3" mnemonicParsing="false" onAction="#clickB3" prefHeight="42.0" prefWidth="62.0" GridPane.columnIndex="3">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b2" mnemonicParsing="false" onAction="#clickB2" prefHeight="43.0" prefWidth="62.0" GridPane.columnIndex="2">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="b1" mnemonicParsing="false" onAction="#clickB1" prefHeight="125.0" prefWidth="62.0" GridPane.columnIndex="1">
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
                   <Button fx:id="b0" mnemonicParsing="false" onAction="#clickB0" prefHeight="105.0" prefWidth="62.0">
                      <cursor>
                         <Cursor fx:constant="OPEN_HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="b1" mnemonicParsing="false" onAction="#clickB1" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="1">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b2" mnemonicParsing="false" onAction="#clickB2" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="2">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b3" mnemonicParsing="false" onAction="#clickB3" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="3">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b4" mnemonicParsing="false" onAction="#clickB4" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="4">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b5" mnemonicParsing="false" onAction="#clickB5" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="5">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b6" mnemonicParsing="false" onAction="#clickB6" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="6">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b7" mnemonicParsing="false" onAction="#clickB7" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="7">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="b8" mnemonicParsing="false" onAction="#clickB8" prefHeight="105.0" prefWidth="62.0" GridPane.columnIndex="8">
-                     <cursor>
-                        <Cursor fx:constant="OPEN_HAND" />
-                     </cursor>
-                  </Button>
+                  <Circle fx:id="k00" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="1" />
+                  <Circle fx:id="k01" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="2" />
+                  <Circle fx:id="k02" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="3" />
+                  <Circle fx:id="k03" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="4" />
+                  <Circle fx:id="k04" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="5" />
+                  <Circle fx:id="k05" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="6" />
+                  <Circle fx:id="k10" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Circle fx:id="k11" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Circle fx:id="k12" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Circle fx:id="k13" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Circle fx:id="k14" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Circle fx:id="k15" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Circle fx:id="k20" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Circle fx:id="k21" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Circle fx:id="k22" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Circle fx:id="k23" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <Circle fx:id="k30" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                  <Circle fx:id="k40" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                  <Circle fx:id="k50" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                  <Circle fx:id="k60" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                  <Circle fx:id="k70" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+                  <Circle fx:id="k80" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+                  <Circle fx:id="k31" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <Circle fx:id="k32" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <Circle fx:id="k41" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                  <Circle fx:id="k51" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                  <Circle fx:id="k61" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                  <Circle fx:id="k53" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                  <Circle fx:id="k45" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                  <Circle fx:id="k44" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                  <Circle fx:id="k43" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                  <Circle fx:id="k35" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Circle fx:id="k34" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                  <Circle fx:id="k25" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                  <Circle fx:id="k24" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                  <Circle fx:id="k33" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                  <Circle fx:id="k72" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+                  <Circle fx:id="k82" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+                  <Circle fx:id="k62" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+                  <Circle fx:id="k52" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                  <Circle fx:id="k42" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                  <Circle fx:id="k81" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+                  <Circle fx:id="k71" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+                  <Circle fx:id="k55" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                  <Circle fx:id="k84" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+                  <Circle fx:id="k74" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+                  <Circle fx:id="k64" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                  <Circle fx:id="k54" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                  <Circle fx:id="k83" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+                  <Circle fx:id="k73" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+                  <Circle fx:id="k63" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                  <Circle fx:id="k85" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="8" GridPane.rowIndex="6" />
+                  <Circle fx:id="k75" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+                  <Circle fx:id="k65" fill="#f5f5f5" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="6" GridPane.rowIndex="6" />
                </children>
             </GridPane>
          </children>
@@ -104,13 +159,13 @@
          <menus>
             <Menu mnemonicParsing="false" text="Modo de juego">
                <items>
-                  <RadioMenuItem fx:id="menuBiJok" mnemonicParsing="false" onAction="#clickMenuBiJok" text="2 Jugadores">
+                  <RadioMenuItem fx:id="menu2jugadores" mnemonicParsing="false" onAction="#click2jugadores" text="2 Jugadores">
                      <toggleGroup>
                         <ToggleGroup fx:id="toggleGroup" />
                      </toggleGroup>
                   </RadioMenuItem>
-                  <RadioMenuItem fx:id="menuJOErraza" mnemonicParsing="false" onAction="#clickMenuJOErraza" text="IA facil" toggleGroup="$toggleGroup" />
-                  <RadioMenuItem fx:id="menuJOZaila" mnemonicParsing="false" onAction="#clickMenuJOZaila" text="IA Dificil" toggleGroup="$toggleGroup" />
+                  <RadioMenuItem fx:id="menuIAfacil" mnemonicParsing="false" onAction="#clickIAfacil" text="IA facil" toggleGroup="$toggleGroup" />
+                  <RadioMenuItem fx:id="menuIAdificil" mnemonicParsing="false" onAction="#clickIAdificil" text="IA Dificil" toggleGroup="$toggleGroup" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Reiniciar">
