--- a/resources/view/t3raya.fxml
+++ b/resources/view/t3raya.fxml
@@ -1,24 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T3raya">
-   <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text layoutX="244.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HOLA RAYA 3" />
-            <Button fx:id="bok" layoutX="119.0" layoutY="188.0" mnemonicParsing="false" onAction="#cok" text="Button" />
-         </children>
-      </AnchorPane>
-   </center>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T3raya">
    <bottom>
       <AnchorPane prefHeight="49.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="bReturn" layoutX="42.0" layoutY="12.0" mnemonicParsing="false" onAction="#cReturn" text="Volver al menu" />
+            <Button fx:id="bok" layoutX="172.0" layoutY="11.0" mnemonicParsing="false" onAction="#cok" text="Button" />
+            <Text layoutX="260.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="hola 4" />
          </children>
       </AnchorPane>
    </bottom>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="216.0" layoutY="128.0" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: withe;">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="99.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Rectangle fx:id="k20" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" onMouseClicked="#click20" onMouseEntered="#k20In" onMouseExited="#k20Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" GridPane.rowIndex="2" />
+                  <Rectangle fx:id="k21" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" onMouseClicked="#click21" onMouseEntered="#k21In" onMouseExited="#k21Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Rectangle fx:id="k22" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" onMouseClicked="#click22" onMouseEntered="#k22In" onMouseExited="#k22Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" text="Button" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" text="Button" GridPane.rowIndex="1" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" text="Button" GridPane.columnIndex="1" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Button maxHeight="100.0" maxWidth="100.0" minHeight="100.0" minWidth="100.0" mnemonicParsing="false" style="-fx-border-width: 3; -fx-border-color: black;" textFill="#333614" GridPane.columnIndex="2" />
+               </children>
+            </GridPane>
+            <Label fx:id="textModoJuego" layoutX="306.0" layoutY="23.0" prefHeight="35.0" prefWidth="268.0" text="textModoJuego">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="circulo" fitHeight="32.0" fitWidth="35.0" layoutX="78.0" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/circulo.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="equis" fitHeight="32.0" fitWidth="36.0" layoutX="33.0" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/equis.png" />
+               </image>
+            </ImageView>
+            <Rectangle fx:id="k00" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="54.0" layoutY="137.0" onMouseClicked="#click00" onMouseEntered="#k00In" onMouseExited="#k00Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+            <Rectangle fx:id="k01" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="94.0" layoutY="22.0" onMouseClicked="#click01" onMouseEntered="#k01In" onMouseExited="#k01Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+            <Rectangle fx:id="k02" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="527.0" layoutY="12.0" onMouseClicked="#click02" onMouseEntered="#k02In" onMouseExited="#k02Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+            <Rectangle fx:id="k11" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="220.0" layoutY="9.0" onMouseClicked="#click11" onMouseEntered="#k11In" onMouseExited="#k11Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+            <Rectangle fx:id="k10" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="320.0" layoutY="14.0" onMouseClicked="#click10" onMouseEntered="#k10In" onMouseExited="#k10Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+            <Rectangle fx:id="k12" arcHeight="5.0" arcWidth="5.0" fill="#09b22e" height="100.0" layoutX="553.0" layoutY="128.0" onMouseClicked="#click12" onMouseEntered="#k12In" onMouseExited="#k12Exit" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="100.0" />
+         </children>
+      </AnchorPane>
+   </center>
+   <top>
+      <MenuBar prefHeight="33.0" prefWidth="593.0" BorderPane.alignment="CENTER">
+         <menus>
+            <Menu mnemonicParsing="false" text="Modo de juego">
+               <items>
+                  <RadioMenuItem fx:id="menu2jugadores" mnemonicParsing="false" onAction="#click2jugadores" text="2 Jugadores">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="toggleGroup" />
+                     </toggleGroup>
+                  </RadioMenuItem>
+                  <RadioMenuItem fx:id="menuIAfacil" mnemonicParsing="false" onAction="#clickIAfacil" text="IA facil" toggleGroup="$toggleGroup" />
+                  <RadioMenuItem fx:id="menuIAdificil" mnemonicParsing="false" onAction="#clickIAdificil" text="IA Dificil" toggleGroup="$toggleGroup" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Reiniciar">
+               <items>
+                  <MenuItem mnemonicParsing="false" onAction="#clickReiniciar" text="Reiniciar" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+   </top>
 </BorderPane>
