--- a/resources/view/menu.fxml
+++ b/resources/view/menu.fxml
@@ -1,18 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.Menu">
    <center>
-      <AnchorPane prefHeight="429.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="429.0" prefWidth="600.0" style="-fx-background-color: indigo;" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="289.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="hola" />
-            <Button fx:id="raya4" layoutX="53.0" layoutY="98.0" mnemonicParsing="false" onAction="#click4" text="4 en raya" />
-            <Button fx:id="raya3" layoutX="53.0" layoutY="147.0" mnemonicParsing="false" onAction="#click3" text="3 en raya" />
-            <Button fx:id="bok" layoutX="53.0" layoutY="188.0" mnemonicParsing="false" onAction="#okclick" text="ok" />
+            <ImageView fx:id="juego4raya" fitHeight="170.0" fitWidth="170.0" layoutX="115.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/4enRaya.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="juego3raya" fitHeight="170.0" fitWidth="170.0" layoutX="326.0" layoutY="128.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/3enRaya.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="b4raya" layoutX="115.0" layoutY="128.0" mnemonicParsing="false" onAction="#jugar4raya" prefHeight="170.0" prefWidth="170.0" />
+            <Button fx:id="b3raya" layoutX="326.0" layoutY="128.0" mnemonicParsing="false" onAction="#jugar3raya" prefHeight="170.0" prefWidth="170.0" />
+            <ImageView fx:id="logo" fitHeight="126.0" fitWidth="125.0" layoutX="475.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/VariosJuegos.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+            <Label layoutX="36.0" layoutY="31.0" prefHeight="53.0" prefWidth="101.0" text="Hola" textFill="WHITE">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+            <Label fx:id="usuario" layoutX="125.0" layoutY="31.0" prefHeight="53.0" prefWidth="161.0" text="usuario" textFill="WHITE">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
