--- a/resources/view/t3raya.fxml
+++ b/resources/view/t3raya.fxml
@@ -16,11 +16,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="841.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T3raya">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: aquamarine;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ges.T3raya">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="216.0" layoutY="128.0" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: withe;">
+            <GridPane fx:id="grid" gridLinesVisible="true" layoutX="150.0" layoutY="96.0" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: withe;">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="99.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -133,12 +133,12 @@
                   </ImageView>
                </children>
             </GridPane>
-            <Label fx:id="textModoJuego" layoutX="306.0" layoutY="23.0" prefHeight="35.0" prefWidth="268.0" text="textModoJuego">
+            <Label fx:id="textModoJuego" alignment="CENTER" layoutX="200.0" layoutY="36.0" prefHeight="35.0" prefWidth="200.0" text="textModoJuego">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <ImageView fx:id="circulo" fitHeight="65.0" fitWidth="65.0" layoutX="108.0" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="circulo" fitHeight="65.0" fitWidth="65.0" layoutX="33.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/circulo.png" />
                </image>
